# COVID

./: .gitignore  COVID.ini  COVID.py  Cargo.toml  LICENSE  Makefile  README.md  requirements.txt
src/: graph.rs  main.rs  metainfo.rs
static/: .gitignore  manifest
templates/: all.html  index.html
