[package]
name = "covid"
version = "0.1.0"
authors = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
edition = "2018"

description = "(meta)programming language for IoT-chipping over 5G"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
lazy_static = "*"
